# L3-Compiler

./: CMakeLists.txt  README.md  build_and_test.sh  build_compile_and_run.sh  compile.sh  compile_and_run.sh  test_source.l3  tester.sh
backend/: code_generator.cpp  code_generator.h  compiler.cpp  compiler.h  msg.cpp  msg.h  node.h  utility.h  variable.h
frontend/: lexer.h  lexer.l  parser.y
modules/: main.il
tests/: arithmetic.in  arithmetic.out  arrays.in  arrays_init.in  arrays_multi_dimen.in  arrays_print.in  arrays_print.out  for_loop.in  for_loop.out  func_call_get_arr_el.in  func_calls.in  func_def_order.in  if_statement.in  if_statement.out  length_op.in  length_op.out  main_args_process.in  main_args_process.out  multiply.in  multiply.out  operators.in  operators.out  string.in  string.out  test1.in  test1.out
